Style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

*{
    margin: 0;
    padding: 0;
    text-decoration: none;
    list-style: none;
    box-sizing: border-box;
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: weight;
     font-style: normal;

}

.TopNav{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: #0729A2;
    color:#ffffff;
    padding:1.7rem 15rem 1.7rem 15rem;
    border-bottom: 1px solid;
    border-color: #5050C7;
}

.NavLinks{
    width: fit-content;
    height: auto;
}

.desktop-menu{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    column-gap: 4.5rem;
}

.desktop-menu i{
    display: none;
    cursor: pointer;
}

.links{
    color: #ffffff;
    font-size: 1rem;
    font-weight: 400;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    column-gap: 1rem;
    cursor: pointer;
}

.nav-btns{
    width: fit-content;
    height: auto;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    column-gap: 1rem;
    
}
.secondary-btn{
    width: fit-content;
    height: auto;
    padding: 1rem;
    background-color: transparent;
    border: 1px solid #ffffff;
    color: #ffffff;
    border-radius: 0.5rem;;
    font-size: 1rem;
    cursor: pointer;
}

.primary-btn{
    width: fit-content;
    height: auto;
    padding: 1rem;
    background-color: #ffffff;
    border: none;
    color: #0729A2;
    border-radius: 0.5rem;
    font-size: 1rem;
    cursor: pointer;
}

.mobile-menu{
    width: 70%;
    background-color: #0729A2;
    color:#ffffff;
    position: fixed;
    top: 0;
    left:0;
    height: 100vh;
    z-index: 100;
    padding: 2rem;
    display: none;
    flex-direction: column;
    justify-content: start;
    align-items: start;
    row-gap: 3rem;
    
}

.nav-btns-mobile{
    width: fit-content;
    height: auto;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-content: center;
    column-gap: 1rem;
}

.mobile-menu ul{
    width: fit-content;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    row-gap: 1rem;
}

.logo-and-close-icon{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.HeroSection{
    background-color: #0729A2;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding:6.25rem 15rem 0rem 15rem;
    width: 100%;
    height:66.5%;

}
.TextAndCTA{
    display: flex;
    flex-direction: column;
    align-content: center;
    width: 40%;
    height: auto;
    row-gap: 1.5rem;
    
}
.HeroText{
    width: fit-content;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: start;
    row-gap: 2rem;
    color: #ffffff;

}
.HeroImg{
    max-width: 60%;
}
.HeroText h1{
    font-family: work Sans;
    font-size: 4rem;
}
.HeroText p{
    font-size: 1.125rem;
    font-weight: 400;
    max-width: 75%;
    line-height: 2rem;
    
}
.DownloadCTA{
    display: flex;
    flex-direction: row;
    align-content: center;
    text-align: center;
    column-gap: 1rem;
    cursor: pointer;
}

.AppStore, .PlayStore{
    width:30%;
    height: auto;
}

.AppStore img, .PlayStore img{
    width:100%;
    height: auto;
}

.SectionTwo{
    background-color: #FAFAFF;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding:6.25rem 15rem 6.25rem 15rem;
    width: 100%;
    height: auto;
    row-gap: 4rem;

}
.SectionTwoCards{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: row;
    justify-content: start;
    align-items: center;
    column-gap: 5rem;
   
    
}


.SectionTwoTxt h2{
    font-family: Work Sans;
    font-size: 2.5rem;
    color: #1D2939;
}

.SectionTwoTxt p{
    color: #3D3D3D;
    font-size: 1.125;
    font-weight: 400;
}


.card-and-btn-container{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    row-gap: 2.5rem;
}
.card{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: start;
    row-gap: 1.75rem;
}
.cardImg{
    width: 100%;
    height: auto;
}

.cardImg img{
    width: 100%;
    height: auto;
}
.CardText{
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: start;
    row-gap: 0.75rem;

}
.CardText h5{
    font-family: Work Sans;
    font-size: 1.625rem;
    color: #1D2939;
}
.CardText p{
    font-size: 1rem;
    color: #444F5F;
    line-height: 1.6rem;
}
.CardBtn{
    display: flex;
    flex-direction: row;
    align-items: center;
    text-decoration: none;
    color: #191919;
    font-size: 1.125rem;
    font-weight: 600;
    column-gap: 1rem;
}

.CardBtn:hover{
    display: flex;
    flex-direction: row;
    align-items: center;
    text-decoration: none;
    color: #191919;
    font-size: 1.138rem;
    font-weight: 600;
    column-gap: 1.5rem;
    cursor: pointer;
}

.SectionCont{
    padding: 3rem 15rem 3rem 15rem;
    width: 100%;
    height: auto;
    background-color: #FAFAFF;

}
.SectionThree{
    background-color: #CCCCFF;
    border-radius: 2rem;
    padding-left: 6rem ;
    padding-right: 6rem;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: start;
    column-gap: 5rem;
    width: 100%;
    height: auto;
}

.LeftContent{
   width: 50%;
   height: auto;
}
/* ... */

